--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=_3weeks
+
+# h2 database
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test2;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
