--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url=jdbc:h2:~/test2;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+#spring.data.redis.repositories.enabled=false
 
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
