--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,26 @@
 spring.application.name=_3weeks
 
-# h2 database
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/test2;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/java2_board?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.username=java2_board
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 #spring.data.redis.repositories.enabled=false
 
-# JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
 
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
