--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,19 @@ jobs:
     steps:
       - name : EC2 SSH 접속하기
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
+          envs: APPLICATION_PROPERTIES
           script_stop: true
           script: |
             cd /home/ubuntu/ho-commerce
+            rm -rf src/amin/resources/application.properties
             git pull origin main
+            echo "$APPLICATION_PROPERTIES" > src/main/resources/application.properties
             ./gradlew clean build -x test
             sudo fuser -k -n tcp 8080 || true
             
