--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,35 @@ jobs:
   My-Deploy-Job:
     runs-on: ubuntu-latest
     steps:
+      - name: Github Repository 최근 커밋파일 불러오기
+        uses: actions/checkout@v4
+
+      - name: JDK 17 설치
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: application.properties 파일 생성
+        run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.properties
+
+      - name: 테스트 및 빌드
+        run: ./gradlew clean build -x test
+
+      - name: 식별하기 좋게 빌드 파일명 변경
+        run: mv ./build/libs/*SNAPSHOT.jar ./gwangho-success.jar
+
+      - name: SCP로 EC2에 빌드된 파일 전송
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          source: gwangho-success.jar
+          target: /home/ubuntu/ho-commerce/tobe
+
       - name : EC2 SSH 접속하기
         uses: appleboy/ssh-action@v1.0.3
-        env:
-          APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -24,12 +49,10 @@ jobs:
           envs: APPLICATION_PROPERTIES
           script_stop: true
           script: |
-            cd /home/ubuntu/ho-commerce
-            rm -rf src/amin/resources/application.properties
-            git pull origin main
-            echo "$APPLICATION_PROPERTIES" > src/main/resources/application.properties
-            ./gradlew clean build -x test
+            rm -rf /home/ubuntu/ho-commerce/current
+            mkdir /home/ubuntu/ho-commerce/current
+            mv /home/ubuntu/ho-commerce/tobe/gwangho-success.jar /home/ubuntu/ho-commerce/current/gwangho-success.jar
+            cd /home/ubuntu/ho-commerce/current
             sudo fuser -k -n tcp 8080 || true
-            
-            nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
-
+            nohup java -jar gwangho-success.jar > ./output.log 2>&1 &
+            rm -rf /home/ubuntu/ho-commerce/tobe
