--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       - name: application.properties 파일 생성
         run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.properties
 
+      - name: gradlew 실행 권한 추가
+        run: chmod +x ./gradlew
+
       - name: 테스트 및 빌드
         run: ./gradlew clean build -x test
 
