--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
-      - mysql_data:/var/lib/mysql
-
+      - ./src/main/resources/docker_dummy_data.sql:/docker-entrypoint-initdb.d/docker_dummy_data.sql
   redis:
     image: redis:latest
     container_name: redis_container
